<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <ImageView
                android:id="@+id/dialog_place_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_of_place"
                android:src="@drawable/ongole_aerial" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/dialog_place_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/main_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_text_size_list_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_example"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/dialog_rating_of_place"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:isIndicator="true"
                android:numStars="5"
                android:theme="@style/Theme.Rating" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/land_mark_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/land_mark_icon"
                app:srcCompat="@drawable/ic_room_black_24dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dialog_place_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/address"
                    android:textColor="@android:color/black" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/phone_icon"
                app:srcCompat="@drawable/ic_phone_black_24dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dialog_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/phone_number_example"
                    android:textColor="@android:color/black" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/visit_maps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_map_black_48dp"
                    android:clickable="false"
                    android:contentDescription="@string/open_in_maps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="95dp"
                    android:clickable="false"
                    android:text="@string/open_in_maps"
                    android:textAllCaps="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phone_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_phone_black_48dp"
                    android:clickable="false"
                    android:contentDescription="@string/calls_to_that_place" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="95dp"
                    android:clickable="false"
                    android:text="@string/call"
                    android:textAllCaps="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/share_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_share_black_48dp"
                    android:clickable="false"
                    android:contentDescription="@string/shares_place" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="95dp"
                    android:clickable="false"
                    android:text="@string/share"
                    android:textAllCaps="true" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>