<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ongolePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ongole_aerial_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ongole_aerial" />

            <TextView
                android:id="@+id/ongoleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:shadowColor="@android:color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"
                android:text="@string/ongole"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="27sp"
                tools:targetApi="lollipop" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/aboutOngoleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/ongole_body"
            android:textColor="@android:color/black"
            android:textSize="@dimen/about_ongole_body_text_size" />
    </android.support.v7.widget.CardView>

</LinearLayout>