<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:focusable="true"
        app:cardCornerRadius="8dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteColor">

            <android.support.v7.widget.CardView
                android:id="@+id/imageCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_of_place"
                    android:scaleType="centerCrop" />
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageCardView"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/main_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/title_text_size_list_view"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating_value_of_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toStartOf="@id/rating_of_place"
                    android:text="@string/rating_example"
                    android:textColor="@android:color/black"
                    tools:ignore="RelativeOverlap" />

                <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/rating_of_place"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:theme="@style/Theme.Rating" />

            </RelativeLayout>

            <TextView
                android:id="@+id/subTitle_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_layout"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/sub_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_list_view" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>